# project-euler-rust

./: Cargo.toml
src/: p1.rs  p2.rs  p3.rs  p5.rs  p6.rs  p7.rs  prime.rs
