[package]
name = "project-euler-rust"
version = "0.1.0"
authors = ["Mark Wallace <lotabout@gmail.com>"]

[[bin]]
name = "p1"
path = "src/p1.rs"

[[bin]]
name = "p2"
path = "src/p2.rs"

[[bin]]
name = "p3"
path = "src/p3.rs"

[[bin]]
name = "p4"
path = "src/p4.rs"

[[bin]]
name = "p5"
path = "src/p5.rs"

[[bin]]
name = "p6"
path = "src/p6.rs"
